--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.6.0",
     "hono": "^4.7.10",
-    "zod": "^3.25.30"
+    "zod": "^3.25.30",
+    "@aevim/shared-types": "file:../../packages/shared-types"
   }
 }
