--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "npm run build:backend && npm run build:frontend",
     "build:backend": "cd apps/backend && bun run build",
     "build:frontend": "cd apps/frontend && npm run build",
-    "db:users:reset": "cd apps/backend && bun run db:users:reset"
+    "db:users:reset": "cd apps/backend && bun run db:users:reset",
+    "db:workouts:reset": "cd apps/backend && bun run db:workouts:reset"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
