--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:backend": "cd apps/backend && bun test",
     "test:frontend": "cd apps/frontend && npm test",
     "build": "npm run build:backend && npm run build:frontend",
-    "build:backend": "cd apps/backend && bun run build",
+    "build:backend": "cd apps/backend && bun tsc",
     "build:frontend": "cd apps/frontend && npm run build",
     "db:users:reset": "cd apps/backend && bun run db:users:reset",
     "db:workouts:reset": "cd apps/backend && bun run db:workouts:reset"
