--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "build:backend": "cd apps/backend && bun tsc",
     "build:frontend": "cd apps/frontend && npm run build",
     "db:users:reset": "cd apps/backend && bun run db:users:reset",
-    "db:workouts:reset": "cd apps/backend && bun run db:workouts:reset"
+    "db:workouts:reset": "cd apps/backend && bun run db:workouts:reset",
+    "db:we:reset": "cd apps/backend && bun run db:we:reset",
+    "db:exercises:reset": "cd apps/backend && bun run db:exercises:reset"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
