--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "cd apps/backend && bun run dev",
-    "dev:frontend": "cd apps/frontend && npm run dev",
+    "dev:frontend": "cd apps/frontend && bun run dev",
     "start:backend": "cd apps/backend && bun run start",
-    "start:frontend": "cd apps/frontend && npm run start",
+    "start:frontend": "cd apps/frontend && bun run start",
     "test": "npm run test:backend && npm run test:frontend",
     "test:backend": "cd apps/backend && bun test",
     "test:frontend": "cd apps/frontend && npm test",
