refactor: migrate project to use Bun for package management and scripts
- Removed package-lock.json to transition to Bun.
- Updated package.json scripts to use Bun commands instead of npm.
- Modified shared-types package.json to output built files to dist directory.
- Added clean script to shared-types for removing dist folder.
- Introduced tsconfig.json for shared-types with appropriate TypeScript settings.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "bun run src/index.ts",
     "dev": "bun run --hot src/index.ts",
+    "build": "bun run tsc",
     "db:users:reset": "bun run scripts/reset-users.ts",
     "db:workouts:reset": "bun run scripts/reset-workouts.ts",
     "db:we:reset": "bun run scripts/reset-workout-exercises.ts",
