--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev": "concurrently \"bun run dev:backend\" \"bun run dev:frontend\"",
     "dev:backend": "cd apps/backend && bun run dev",
     "dev:frontend": "cd apps/frontend && bun run dev",
     "start:backend": "cd apps/backend && bun run start",
     "start:frontend": "cd apps/frontend && bun run start",
-    "test": "npm run test:backend && npm run test:frontend",
+    "test": "bun run test:backend && bun run test:frontend",
     "test:backend": "cd apps/backend && bun test",
-    "test:frontend": "cd apps/frontend && npm test",
+    "test:frontend": "cd apps/frontend && bun test",
     "coverage:backend": "cd apps/backend && bun test --coverage",
-    "build": "npm run build:backend && npm run build:frontend",
-    "build:backend": "cd apps/backend && bun tsc",
-    "build:frontend": "cd apps/frontend && npm run build",
+    "build": "bun run build:shared && bun run build:backend && bun run build:frontend",
+    "build:shared": "cd packages/shared-types && bun run build",
+    "build:backend": "cd apps/backend && bun run build",
+    "build:frontend": "cd apps/frontend && bun run build",
     "db:users:reset": "cd apps/backend && bun run db:users:reset",
     "db:workouts:reset": "cd apps/backend && bun run db:workouts:reset",
     "db:we:reset": "cd apps/backend && bun run db:we:reset",
@@ -30,8 +31,7 @@
     "concurrently": "^8.2.2"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=18.0.0"
   },
   "repository": {
     "type": "git",
