--- a/packages/shared-types/tsconfig.json
+++ b/packages/shared-types/tsconfig.json
@@ -11,6 +11,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./*.ts"],
+  "include": ["./**/*.ts"],
   "exclude": ["dist", "node_modules"]
 }
