--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -7,6 +7,7 @@
     "dev": "bun run tsc --watch",
     "clean": "rm -rf dist"
   },
+  "private": true,
   "keywords": [],
   "author": "",
   "license": "ISC",
