fix: enable watch mode for backend and frontend tests

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "start:backend": "cd apps/backend && bun run start",
     "start:frontend": "cd apps/frontend && bun run start",
     "test": "bun run test:backend && bun run test:frontend",
-    "test:backend": "cd apps/backend && bun test",
-    "test:frontend": "cd apps/frontend && bun test",
+    "test:backend": "cd apps/backend && bun test --watch",
+    "test:frontend": "cd apps/frontend && bun test --watch",
     "coverage:backend": "cd apps/backend && bun test --coverage",
     "build": "bun run build:shared && bun run build:backend && bun run build:frontend",
     "build:shared": "cd packages/shared-types && bun run build",
