--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "concurrently \"bun run dev:backend\" \"bun run dev:frontend\"",
+    "dev": "concurrently \"bun run dev:backend\" \"bun run dev:frontend\" \"sleep 3 && open http://localhost:3000 && open http://localhost:4000\"",
     "dev:backend": "cd apps/backend && bun run dev",
     "dev:frontend": "cd apps/frontend && bun run dev",
     "start:backend": "cd apps/backend && bun run start",
