--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "db:workouts:reset": "cd apps/backend && bun run db:workouts:reset",
     "db:we:reset": "cd apps/backend && bun run db:we:reset",
     "db:exercises:reset": "cd apps/backend && bun run db:exercises:reset",
-    "db:sets:reset": "cd apps/backend && bun run db:sets:reset"
+    "db:sets:reset": "cd apps/backend && bun run db:sets:reset",
+    "lint:backend": "cd apps/backend && bun run lint",
+    "lint:frontend": "cd apps/frontend && bun run lint",
+    "lint": "bun run lint:backend && bun run lint:frontend"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
