--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "db:we:reset": "cd apps/backend && bun run db:we:reset",
     "db:exercises:reset": "cd apps/backend && bun run db:exercises:reset",
     "db:sets:reset": "cd apps/backend && bun run db:sets:reset",
-    "lint": "prettier --check .",
+    "lint:backend": "cd apps/backend && bun run lint",
+    "lint:frontend": "cd apps/frontend && bun run lint",
+    "lint": "bun run lint:backend && bun run lint:frontend",
     "format": "prettier --write .",
     "prepare": "husky"
   },
